Modified for cairo/cairo#3

* Use Win32 font as default
* Use cairo_win32_font_face_create_for_hfont instead of cairo_win32_font_face_create_for_logfontw
* Disabled DPI awareness to make CTM the identity transform
* Disabled Magnifier as default

<https://gitlab.freedesktop.org/cairo/cairo/-/issues/3>